--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html>
 
 <head>
+    <link rel="icon" href="media/flaticonmaker.png" />
     <link type="text/css" rel="stylesheet" href="style.css" />
     <title>
-
+        Changing Background
     </title>
 </head>
 
 <body>
-<div class="box">
-    
-</div>
+    <div class="box">
+
+    </div>
 </body>
 
 </html>
